修改字體圖片大小距離.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
   <meta charset="UTF-8">
   <title>CodePen - A Pen by Andy</title>
   <link rel="stylesheet" href="./style.css">
-
+  <style type="text/css">
+    @import url("http://fonts.googleapis.com/earlyaccess/cwtexhei.css");
+  </style>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -69,6 +71,36 @@
       </div>
     </div>
   </div>
+  <div class="contentDetail">
+    <div class="detail contentTitle">
+      <div class="contentTitleDetail"></div>
+    </div>
+    <div class="contentPurpose">
+      <div class="contentPurposeTitle"></div>
+      <div class="contentPurposeDetail"></div>
+    </div>
+    <div class="detail contentNumber">
+      <div class="contentNumberTitle"></div>
+      <div class="contentNumberDetail"></div>
+    </div>
+    <div class="detail contentItem">
+      <div class="contentItemTitle"></div>
+      <div class="contentItemDetail"></div>
+    </div>
+    <div class="detail contentItem">
+      <div class="contentItemTitle"></div>
+      <div class="contentItemDetail"></div>
+    </div>
+    <div class="detail contentRules">
+      <div class="contentRulesTitle"></div>
+      <div class="contentRulesDetail"></div>
+    </div>
+    <div class="detail contentSuggest">
+      <div class="contentSuggestTitle"></div>
+      <div class="ccontentSuggestDetail"></div>
+    </div>
+    <div class="detail contentVideo"></div>
+  </div>
   <div class="optionContent">
     <div class="bt1">
       <div class="circle"></div>
@@ -77,8 +109,9 @@
       <div class="circle"></div>
     </div>
   </div>
+  
 </div>
 <!-- partial -->
-  
+  <script src="./scripts.js"></script>
 </body>
 </html>
