遊戲說明排版.

--- a/index.html
+++ b/index.html
@@ -72,34 +72,35 @@
     </div>
   </div>
   <div class="contentDetail">
-    <div class="detail contentTitle">
-      <div class="contentTitleDetail"></div>
+    <div class="contentTitle">
+      <div class="contentTitleDetail">合作解題</div>
     </div>
     <div class="contentPurpose">
-      <div class="contentPurposeTitle"></div>
-      <div class="contentPurposeDetail"></div>
+      <div class="contentPurposeTitle">目的</div>
+      <div class="contentPurposeDetail">合作解題</div>
     </div>
-    <div class="detail contentNumber">
-      <div class="contentNumberTitle"></div>
-      <div class="contentNumberDetail"></div>
+    <div class="contentNumber">
+      <div class="contentNumberTitle">人數</div>
+      <div class="contentNumberDetail">5</div>
     </div>
-    <div class="detail contentItem">
-      <div class="contentItemTitle"></div>
-      <div class="contentItemDetail"></div>
+    <div class="contentItem">
+      <div class="contentItemTitle">物資</div>
+      <div class="contentItemDetail">圖片</div>
     </div>
-    <div class="detail contentItem">
-      <div class="contentItemTitle"></div>
-      <div class="contentItemDetail"></div>
+    <div class="contentRules">
+      <div class="contentRulesTitle">玩法</div>
+      <div class="contentRulesDetail">
+        1. 參加者可在場中央任意走動<p>2. 互相介紹自己的名字<p>3. 看看誰收集到最多的名字<p>4. 最後，工作員可邀請參加者分享收集到哪些名字
+      </div>
     </div>
-    <div class="detail contentRules">
-      <div class="contentRulesTitle"></div>
-      <div class="contentRulesDetail"></div>
+
+    <div class="contentSuggest">
+      <div class="contentSuggestTitle">建議</div>
+      <div class="ccontentSuggestDetail">
+        1. 參加者可在場中央任意走動<p>2. 互相介紹自己的名字<p>3. 看看誰收集到最多的名字<p>4. 最後，工作員可邀請參加者分享收集到哪些名字
+      </div>
     </div>
-    <div class="detail contentSuggest">
-      <div class="contentSuggestTitle"></div>
-      <div class="ccontentSuggestDetail"></div>
-    </div>
-    <div class="detail contentVideo"></div>
+    <div class="contentVideo"></div>
   </div>
   <div class="optionContent">
     <div class="bt1">
