--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
       </div>
     </div>
   </div>
-  <div class="contentDetail">
+  <!-- <div class="contentDetail">
     <div class="contentTitle">
-      <div class="contentTitleDetail">合作解題</div>
+      <div class="contentTitleDetail">放大圖片猜猜猜</div>
     </div>
     <div class="contentPurpose">
       <div class="contentPurposeTitle">目的</div>
-      <div class="contentPurposeDetail">合作解題</div>
+      <div class="contentPurposeDetail">互相討論，合作解難</div>
     </div>
     <div class="contentNumber">
       <div class="contentNumberTitle">人數</div>
-      <div class="contentNumberDetail">5</div>
+      <div class="contentNumberDetail">2-5</div>
     </div>
     <div class="contentItem">
       <div class="contentItemTitle">物資</div>
@@ -90,24 +90,34 @@
     <div class="contentRules">
       <div class="contentRulesTitle">玩法</div>
       <div class="contentRulesDetail">
-        1. 參加者可在場中央任意走動<p>2. 互相介紹自己的名字<p>3. 看看誰收集到最多的名字<p>4. 最後，工作員可邀請參加者分享收集到哪些名字
+        1. 將圖片的某一部份放大，然後讓參加者猜圖片中的物件是什麼。<p>2. 物件建議：筆、手機、垃圾桶、洗衣機、貓、巴士、機械人、IRON MAN、多啦A夢、地球
       </div>
     </div>
 
     <div class="contentSuggest">
       <div class="contentSuggestTitle">建議</div>
-      <div class="ccontentSuggestDetail">
-        1. 參加者可在場中央任意走動<p>2. 互相介紹自己的名字<p>3. 看看誰收集到最多的名字<p>4. 最後，工作員可邀請參加者分享收集到哪些名字
+      <div class="contentSuggestDetail">
+        可因應參加者的能力逐漸縮少圖片，以增加參加者猜中的機會。
       </div>
     </div>
-    <div class="contentVideo"></div>
-  </div>
-  <div class="optionContent">
-    <div class="bt1">
-      <div class="circle"></div>
+    <div class="contentVideo">
+      <iframe class="contentVideoDetail" src="https://www.youtube.com/embed/XN031PuViqI?list=PL2SrkGHjnWcyWbA4MGSeTQVNiFHt1YbjC" frameborder="0" allowfullscreen></iframe>
     </div>
-    <div class="bt2">
-      <div class="circle"></div>
+  </div> -->
+  <div class="optionContent">
+    <div class="bt">
+      <div class="btTitle btTitle1">合作</div>
+      <div class="btContent btContent1">
+        <div class="btCircle btCircle1"></div>
+        <div class="btStatus btStatus1">關</div>
+      </div>
+    </div>
+    <div class="bt">
+      <div class="btTitle btTitle2">競爭</div>
+      <div class="btContent btContent2">
+        <div class="btCircle btCircle2"></div>
+        <div class="btStatus btStatus2">關</div>
+      </div>
     </div>
   </div>
   
