更新網頁名稱與調整好設定樣式.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - A Pen by Andy</title>
+  <title>ICE BREAK</title>
   <link rel="stylesheet" href="./style.css">
   <style type="text/css">
     @import url("http://fonts.googleapis.com/earlyaccess/cwtexhei.css");
@@ -104,22 +104,22 @@
       <iframe class="contentVideoDetail" src="https://www.youtube.com/embed/XN031PuViqI?list=PL2SrkGHjnWcyWbA4MGSeTQVNiFHt1YbjC" frameborder="0" allowfullscreen></iframe>
     </div>
   </div> -->
-  <div class="optionContent">
+  <!-- <div class="optionContent">
     <div class="bt">
       <div class="btTitle btTitle1">合作</div>
-      <div class="btContent btContent1">
-        <div class="btCircle btCircle1"></div>
-        <div class="btStatus btStatus1">關</div>
+      <div class="btContent btContentClose">
+        <div class="btCircle btCircleClose"></div>
+        <div class="btStatus btStatusClose">關</div>
       </div>
     </div>
     <div class="bt">
       <div class="btTitle btTitle2">競爭</div>
-      <div class="btContent btContent2">
-        <div class="btCircle btCircle2"></div>
-        <div class="btStatus btStatus2">關</div>
+      <div class="btContent btContentClose">
+        <div class="btCircle btCircleClose"></div>
+        <div class="btStatus btStatusClose">關</div>
       </div>
     </div>
-  </div>
+  </div> -->
   
 </div>
 <!-- partial -->
