--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <style type="text/css">
     @import url("http://fonts.googleapis.com/earlyaccess/cwtexhei.css");
   </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -104,7 +106,7 @@
       <iframe class="contentVideoDetail" src="https://www.youtube.com/embed/XN031PuViqI?list=PL2SrkGHjnWcyWbA4MGSeTQVNiFHt1YbjC" frameborder="0" allowfullscreen></iframe>
     </div>
   </div> -->
-  <!-- <div class="optionContent">
+  <div id='test' class="optionContent">
     <div class="bt">
       <div class="btTitle btTitle1">合作</div>
       <div class="btContent btContentClose">
@@ -119,7 +121,7 @@
         <div class="btStatus btStatusClose">關</div>
       </div>
     </div>
-  </div> -->
+  </div>
   
 </div>
 <!-- partial -->
