開關做好，差轉場動畫.

--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
   <div id='test' class="optionContent">
     <div class="bt">
       <div class="btTitle btTitle1">合作</div>
-      <div class="btContent btContentClose">
-        <div class="btCircle btCircleClose"></div>
-        <div class="btStatus btStatusClose">關</div>
+      <div class="btContent btContent1 btContentClose">
+        <div class="btCircle btCircle1 btCircleClose"></div>
+        <div class="btStatus btStatus1 btStatusClose">關</div>
       </div>
     </div>
     <div class="bt">
       <div class="btTitle btTitle2">競爭</div>
-      <div class="btContent btContentClose">
-        <div class="btCircle btCircleClose"></div>
-        <div class="btStatus btStatusClose">關</div>
+      <div class="btContent btContent2 btContentClose">
+        <div class="btCircle btCircle2 btCircleClose"></div>
+        <div class="btStatus btStatus2 btStatusClose">關</div>
       </div>
     </div>
   </div>
