--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="content">
-    <div class="list list1">
+    <!-- <div class="list list1">
       <div class="listPic listPic1">
         <img class="listPic listPic1" src="https://images.unsplash.com/photo-1584772988869-dccc362700a6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3634&q=80" alt=""></div>
       <div class="listName listName1">
@@ -71,7 +71,7 @@
       <div class="listContent listContent3">
         營造輕鬆的小組氣氛
       </div>
-    </div>
+    </div> -->
   </div>
   <!-- <div class="contentDetail">
     <div class="contentTitle">
