--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     @import url("http://fonts.googleapis.com/earlyaccess/cwtexhei.css");
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-
+  <link rel="shortcut icon" href="./icon/jigsaw.png" type="image/x-icon">
 </head>
 <body>
 <!-- partial:index.partial.html -->
