資料街上去了，不過有多項遊戲解說有換行問題.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
   <!-- <div class="fixTest"></div> -->
   <!-- <div class='del_btn'>X</div> -->
-  <div id='test' class="optionContent">
+  <div class="optionContent">
     <div class="bt">
       <div class="btTitle btTitle1">合作</div>
       <div class="btContent btContent1 btContentClose">
