--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   <div class="optionContent">
     <div class="bt">
       <div class="btTitle btTitle1">合作</div>
-      <div class="btContent btContent1 btContentClose">
+      <div id='bt1' class='btContent btContent1 btContentClose' onclick='bt1Switch(this)'>
         <div class="btCircle btCircle1 btCircleClose"></div>
         <div class="btStatus btStatus1 btStatusClose">關</div>
       </div>
     </div>
     <div class="bt">
       <div class="btTitle btTitle2">競爭</div>
-      <div class="btContent btContent2 btContentClose">
+      <div id='bt2' class='btContent btContent2 btContentClose' onclick='bt2Swirch(this)'>
         <div class="btCircle btCircle2 btCircleClose"></div>
         <div class="btStatus btStatus2 btStatusClose">關</div>
       </div>
